tests/fail/escape_return_ref.tk
import std/io::println
//import std/prelude::*
fn get_ref(x:i32) -> &i32 <- x {
    return &x
}

fn bigger<T>(x:T, y:T) -> &T <- x|y {
    if (x > y) {
        return &x
    }
    return &y
}

shape RefInt <- val
(
    &val : i32
)

fn main() -> i32 {
    auto y = 10
    auto &ref = get_ref(y)
    println("Ref: {}", ref)
    auto z = 20
    auto &big = bigger(y, z)
    println("Big: {}", big)

    auto a = 11
    auto ref_a# = RefInt(&val=&a)
    println("RefA: {}", ref_a.val)

    auto b = 12
    ref_a# = RefInt(&val=&b)
    println("RefB: {}", ref_a.val)
   
    return 0
}
